<resources>
    <string name="app_name">Booky Bloom</string>

    <!--    admin-->
    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>

    <string name="Titulo_RL_Admin">Título</string>

    <string name="Txt_rol">Por favor, seleccione un perfil.</string>

    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_cliente">Cliente</string>

    <!-- Registro -->
    <string name="TxtRegistroAdmin">Registro de administrador</string>

    <string name="Et_nombre_admin">Nombre</string>
    <string name="Et_apellidos_admin">Apellidos</string>
    <string name="Et_email_admin">Email</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_R_password_admin">Confirme la contraseña</string>
    <string name="Btn_registrar_admin">Registrarme</string>
    <string name="Txt_tengo_cuenta">Ya tengo una cuenta</string>

    <string name="CerrarSesionAdmin">Cerrar sesión</string>

    <string name="TxtLoginAdmin">Login administrador</string>
    <string name="Btn_login_admin">Ingresar</string>

    <!--Categorias-->
    <string name="Btn_agregar_categoria">Agregar categoría</string>
    <string name="Txt_agregar_categoria">Agregar categoría</string>
    <string name="Et_categoria">Ingrese categoría</string>
    <string name="Agregar_categoria_DB">Agregar</string>

    <string name="Item_nombre_categoria_admin">Nombre categoría</string>
    <string name="Buscar_categoria">Buscar por categoría</string>

    <!--Libros PDF-->
    <string name="Txt_agregar_libro">Agregar libro</string>
    <string name="Et_titulo_libro">Título del libro</string>
    <string name="Et_descripcion_libro">Descripción</string>
    <string name="Tv_categoria_libro">Categoría</string>
    <string name="Btn_subir_libro">Subir</string>

    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoría</string>
    <string name="Et_buscar_libro_admin">Buscar libros</string>

    <string name="Txt_titulo_libro_item">Título libro</string>
    <string name="Txt_descripcion_libro_item">Descripción libro</string>
    <string name="Txt_categoria_libro_admin">Categoría</string>
    <string name="Txt_peso_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>

    <string name="Txt_actualizar_libro">Actualizar libro</string>
    <string name="Btn_actualizar_libro">Actualizar</string>

    <!-- Detalle libro -->
    <string name="Txt_detalle_libro">Información del libro</string>
    <string name="titulo_libro_D">Título Libro</string>
    <string name="Txt_categoria_D">Categoría: </string>
    <string name="categoria_D"> -- </string>
    <string name="Txt_fecha_D">Fechas: </string>
    <string name="fecha_D"> -- </string>
    <string name="Txt_peso_D">Peso </string>
    <string name="peso_D"> -- </string>
    <string name="Txt_vistas">Vistas </string>
    <string name="vistas_D"> -- </string>
    <string name="Txt_descargas_D">Descargas </string>
    <string name="descargas_D"> -- </string>
    <string name="Txt_paginas_D">Páginas </string>
    <string name="paginas_D"> -- </string>
    <string name="Txt_descripcion_D">Descripción</string>
    <string name="descripcion_D"> -- </string>

    <string name="Btn_leer_libro">Leer</string>
    <string name="Txt_leer_libro">Lectura de libro</string>

    <!-- Perfil del Administrador-->
    <string name="nombre_admin">Nombre: </string>
    <string name="Txt_nombre_admin"> -- </string>
    <string name="apellidos_admin">Apellidos: </string>
    <string name="Txt_apellidos_admin"> -- </string>
    <string name="email_admin">Email: </string>
    <string name="Txt_email_admin"> -- </string>
    <string name="tiempo_registro_admin">Miembro desde: </string>
    <string name="Txt_tiempo_registro_admin"> -- </string>
    <string name="rol_admin">Tipo de usuario: </string>
    <string name="Txt_rol_admin"> -- </string>
    <string name="Txt_mas_opciobes">Más opciones: </string>

    <string name="EditarPerfilAdmin">Editar perfil</string>
    <string name="Txt_editar_perfil_admin">Editar perfil</string>
    <string name="Et_a_nombre">Nombre</string>
    <string name="Btn_Actualizar_info">Actualizar</string>

    <!-- CLIENTE Registro -->
    <string name="TxtRegistrarCliente">Registro Cliente</string>

    <string name="Et_nombre_cl">Nombre</string>
    <string name="Et_apellidos_cl">Apellidos</string>
    <string name="Et_edad_cl">Edad</string>
    <string name="Et_email_cl">Email</string>
    <string name="Et_password_cl">Contraseña</string>
    <string name="Et_r_password_cl">Confirmar contraseña</string>
    <string name="Btn_registrar_cl">Registrarme</string>

    <!-- Menu cliente -->
    <string name="Menu_dashboard_cl">Dashboard</string>
    <string name="Menu_favoritos_cl">Favoritos</string>
    <string name="Menu_cuenta_cl">Cuenta</string>

    <string name="Titulo_RL_Cliente">Título</string>
    <string name="CerrarSesionCliente">Cerrar sesión</string>

    <!-- Login Cliente -->
    <string name="TxtLoginCliente">Login cliente</string>
    <string name="Btn_login_cliente">Iniciar sesión</string>

    <!-- Login con Google -->
    <string name="Txt_alternativa"> o </string>
    <string name="Btn_login_google">Continuar con Google</string>

    <string name="Item_nombre_cat_c">Nombre categoria</string>

    <string name="Et_buscar_libro_cliente">Buscar</string>

    <string name="Btn_leer_libro_C">Leer</string>
    <string name="Btn_descargar_libro_C">Descargar</string>
    <string name="Btn_favoritos_libro_c">Agregar a favoritos</string>

    <string name="Btn_mas_vistos">Más vistos</string>
    <string name="Btn_mas_descargados">Top descargas</string>

    <!-- Comentarios-->
    <string name="Txt_comentarios">Comentarios</string>
    <string name="Txt_agregar_coment">Añadir comentario</string>
    <string name="Et_agregar_comentario">Escribir comentario</string>
    <string name="Btn_comentar">Comentar</string>

    <string name="Tv_nombres_c">Nombres cliente</string>
    <string name="Tv_fecha_c">dd/MM/yyyy</string>
    <string name="Tv_comentario_c">Comentario de usuario</string>

    <!-- Cliente Sesion -->
    <string name="nombres_cliente">Nombres: </string>
    <string name="Txt_nombre_cliente"> -- </string>
    <string name="apellidos_cliente">Apellidos:</string>
    <string name="Txt_apellidos_cliente"> -- </string>
    <string name="email_cliente">Cliente: </string>
    <string name="Txt_email_cliente"> -- </string>
    <string name="tiempo_registro_cliente">Miembro desde:  </string>
    <string name="Txt_tiempo_registro_cliente"> -- </string>
    <string name="edad_cliente">Edad: </string>
    <string name="Txt_edad_cliente"> -- </string>
    <string name="rol_cliente">Usuario tipo: </string>
    <string name="Txt_rol_cliente"> -- </string>

    <!-- Editar perfil cliente -->
    <string name="EditarPerfilCliente">Editar perfil</string>

    <string name="Txt_editar_perfil_cliente">Editar Perfil</string>

    <string name="Et_c_nombre">Nombre</string>
    <string name="Et_c_apellidos">Apellidos</string>
    <string name="Et_c_edad">Edad</string>

    <!-- Id Cliente Firebase -->
    <string name="default_web_client_id">1022026882882-ldr5aduabktq3oiinsoqdk5051lrsv80.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>