<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos_Cliente.Fragment_cliente_cuenta"
    android:background="@color/coral">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Imagen del cliente -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_perfil_cliente"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_img_perfil"/>

        <!-- Nombres -->
        <TextView
            android:id="@+id/nombres_cliente"
            android:text="@string/nombres_cliente"
            android:layout_below="@id/img_perfil_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_nombre_cliente"
            android:text="@string/Txt_nombre_cliente"
            android:layout_below="@id/img_perfil_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Apellidos -->
        <TextView
            android:id="@+id/apellidos_cliente"
            android:text="@string/apellidos_cliente"
            android:layout_below="@id/nombres_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_apellidos_cliente"
            android:text="@string/Txt_apellidos_cliente"
            android:layout_below="@id/nombres_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Email -->
        <TextView
            android:id="@+id/email_cliente"
            android:text="@string/email_cliente"
            android:layout_below="@id/apellidos_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_email_cliente"
            android:text="@string/Txt_email_cliente"
            android:layout_below="@id/apellidos_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Miembro desde -->
        <TextView
            android:id="@+id/tiempo_registro_cliente"
            android:text="@string/tiempo_registro_cliente"
            android:layout_below="@id/email_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_tiempo_registro_cliente"
            android:text="@string/Txt_tiempo_registro_cliente"
            android:layout_below="@id/email_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Edad -->
        <TextView
            android:id="@+id/edad_cliente"
            android:text="@string/edad_cliente"
            android:layout_below="@id/tiempo_registro_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_edad_cliente"
            android:text="@string/Txt_edad_cliente"
            android:layout_below="@id/tiempo_registro_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Tipo de Usuario -->
        <TextView
            android:id="@+id/rol_cliente"
            android:text="@string/rol_cliente"
            android:layout_below="@id/edad_cliente"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_rol_cliente"
            android:text="@string/Txt_rol_cliente"
            android:layout_below="@id/edad_cliente"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@+id/rol_cliente"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Txt_mas_opciobes"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Editar Perfil -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/EditarPerfilCliente"
                    android:text="@string/EditarPerfilCliente"
                    app:drawableStartCompat="@drawable/ic_edit_info"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.card.MaterialCardView>

            <!-- Cerrar sesion -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/CerrarSesionCliente"
                    android:text="@string/CerrarSesionCliente"
                    android:drawablePadding="10dp"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_cerrar_sesion"
                    app:drawableEndCompat="@drawable/ic_siguiente" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </RelativeLayout>

</ScrollView>