<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.DetalleLibro"
    android:background="@color/coral">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRLDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Txt_detalle_libro"
            android:textColor="@color/coral"
            android:textStyle="bold"/>
        
        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <!-- Info Libro -->
    <ScrollView
        android:layout_below="@+id/toolbarRLDetalle"
        android:layout_above="@+id/Btn_leer_libro"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/pastelgreen">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <!-- Imagen del libro -->
                <RelativeLayout
                    android:id="@+id/pdfRL"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_background"
                    android:layout_width="100dp"
                    android:layout_height="140dp">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/VisualizadorPDF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <!-- Titlo Libro -->
                <TextView
                    android:id="@+id/titulo_libro_D"
                    android:text="@string/titulo_libro_D"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/pdfRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titulo_libro_D"
                    android:layout_toEndOf="@id/pdfRL">


                    <!-- Categoria -->
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_categoria_D"
                            android:layout_marginStart="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/categoria_D"
                            android:text="@string/categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                    <!-- Fecha -->
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"/>

                        <TextView
                            android:id="@+id/fecha_D"
                            android:text="@string/categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <!-- DETALLES HORIZONTAL -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="10dp">

                <!-- Bloque para "Vistas" -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/vistas_D"
                        android:text="@string/vistas_D"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/Txt_vistas"
                        android:text="@string/Txt_vistas"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <!-- Bloque para "Tamaño" -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/peso_D"
                        android:text="@string/peso_D"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/Txt_peso_D"
                        android:text="@string/Txt_peso_D"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <!-- Bloque para "Páginas" -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/paginas_D"
                        android:text="@string/paginas_D"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/Txt_paginas_D"
                        android:text="@string/Txt_paginas_D"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <!-- Bloque para "Descargas" -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/descargas_D"
                        android:text="@string/descargas_D"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/Txt_descargas_D"
                        android:text="@string/Txt_descargas_D"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
            
            <!-- Descripcion -->
            <TextView
                android:text="@string/Txt_descripcion_D"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/descripcion_D"
                android:text="@string/descripcion_D"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <!-- Botones -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_leer_libro"
        android:text="@string/Btn_leer_libro"
        android:drawableTop="@drawable/ic_leer_libro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>