<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/coral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/Txt_agregar_coment"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/Ib_close"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIl_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Ib_close">

        <EditText
            android:id="@+id/Et_agregar_comentario"
            android:hint="@string/Et_agregar_comentario"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@color/pastelgreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_comentar"
        android:text="@string/Btn_comentar"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/TIl_comentario"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>